# MI-FS-Paper

./: .gitignore  ESSENTIALS.md  PIPELINE_OVERVIEW.md  QUICK_START.md  README.md  REVIEWER_RESPONSE_PLAN.md  WORKFLOW.md  pyproject.toml  run_all_experiments.ps1
src/: all_contents.txt  printAllFiles.sh  results.rar
src/configs/: arcene.yaml  home_credit.yaml  ieee_fraud.yaml  santander.yaml
src/mi_fs_benchmark/: __init__.py  config.py  logging_utils.py
src/mi_fs_benchmark/core/: __init__.py
src/mi_fs_benchmark/core/fs/: __init__.py  anova.py  base.py  l1_logreg.py  mi.py  mi_gpu.py  mrmr.py  rfe_approx.py  svm_importance.py  tree_importance.py  variance.py
src/mi_fs_benchmark/core/models/: __init__.py  base.py  lgbm.py  logreg.py  mlp.py  svm.py  xgb.py
src/mi_fs_benchmark/data/: __init__.py
src/mi_fs_benchmark/data/datasets/: __init__.py  home_credit.py  ieee_cis_fraud.py
src/mi_fs_benchmark/data/preprocessing/: __init__.py  discretize.py  discretize_gpu.py  mi_precompute.py
src/mi_fs_benchmark/data_processing/: dataset_descriptions.csv
src/mi_fs_benchmark/data_processing/datasets/: __init__.py  arcene.py  base.py  santander.py
src/mi_fs_benchmark/experiment/: __init__.py
src/mi_fs_benchmark/plotting/: __init__.py  bars.py  curves.py  efficiency.py  stability_plots.py
src/mi_fs_benchmark/scripts/: aggregate_results.py  combine_experiments.py  generate_confusion_matrices.py  make_paper_plots.py  make_paper_plots_2.py  make_paper_plots_mi_based.py  plot_publication_figures.py  run_experiment.py  run_multi_seed_experiment.py
(+15 files in other folders)
