[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mi-fs-benchmark"
version = "1.0.0"
description = "Benchmarking mutual-information-based feature selection and baselines on large tabular datasets."
authors = [
    { name = "Martin Janev" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "lightgbm>=4.1",
    "xgboost>=2.0",
    "tqdm>=4.67",
    "boruta>=0.3",
    "shap>=0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mi_fs_benchmark" = ["*.yaml"]
